Inline CSS in XLS and 404

--- a/assets/styles/essential.css
+++ b/assets/styles/essential.css
@@ -144,7 +144,7 @@ nav li {
 	vertical-align: bottom;
 }
 
-nav ul {
+nav menu {
 	margin: 0;
 	padding: 0;
 	text-align: center;
@@ -153,21 +153,21 @@ nav ul {
 	justify-content: center;
 }
 
-nav > ul {
+nav > menu {
 	display: flex;
 	flex-wrap: wrap;
 }
 
-nav > ul > li {
+nav > menu > li {
 	flex-basis: auto;
 	display: inline-block;
 }
 
-nav > ul > li + li {
+nav > menu > li + li {
 	margin-inline-start: 1em;
 }
 
-nav > ul > li > a {
+nav > menu > li > a {
 	display: inline-block;
 	min-height: var(--baseline);
 }
