--- a/layouts/index.rss.xml
+++ b/layouts/index.rss.xml
@@ -13,7 +13,7 @@
 	{{- $pages = $pages | first $limit -}}
 {{- end -}}
 {{- printf `<?xml version="1.0" encoding="UTF-8"?>` | safeHTML }}
-{{- printf `<?xml-stylesheet href="/styles/rss.xsl" type="text/xsl"?>` | safeHTML }}
+{{- printf `<?xml-stylesheet href="/feed.xsl" type="text/xsl"?>` | safeHTML }}
 <rss version="2.0"
 	xmlns:atom="http://www.w3.org/2005/Atom"
 	xmlns:dc="http://purl.org/dc/elements/1.1/"
