--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,7 +1,7 @@
 <nav class="social">
-	<ul>
+	<menu>
 	{{- range .Site.Params.Social -}}
 		<li><a href="{{ .link }}" rel="me noopener" class="icon icon-{{ .name }}" title="{{ .name }}" target="_blank"><span>{{ .name }}</span></a></li>
 	{{- end }}
-	</ul>
+	</menu>
 </nav>
