--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -2013,8 +2013,9 @@ social elsewere menu & icons
 .icon[href*="webring"]::before         { content: '🕸'; }
 
 
-.icon[href$="rss"]::before,
-.icon[href$="xml"]::before             { content: '📡'; }
+.icon[href$=".json"]::before,
+.icon[href$=".rss"]::before,
+.icon[href$=".xml"]::before             { content: '📡'; }
 
 .icon[href*="apple-podcasts"]::before  { content: '📻'; }
 .icon[href*="discord.com"]::before     { content: '👾'; }
@@ -2049,8 +2050,9 @@ social elsewere menu & icons
 .icon[href*="youtube.com"]:hover       { color: #ff0000; }
 .icon[href*="/@"]:hover                { color: #3088d4; }
 
-.icon[href$="rss"]:hover,
-.icon[href$="xml"]:hover               { color: #f26522; }
+.icon[href$=".json"]:hover,
+.icon[href$=".rss"]:hover,
+.icon[href$=".xml"]:hover              { color: #f26522; }
 
 
 /*--------------------------------------------------------------
